# jinhualun

./: .gitignore  README.md  pyproject.toml
agent_evolution/: __init__.py  cli.py  config.py  models.py  pipeline.py  redaction.py  review_docs.py  schedule.py  snapshots.py  state.py
agent_evolution/sources/: __init__.py  base.py  claude_code.py  codex.py  generic_jsonl.py
templates/: agent-evolution.toml  review-doc.md
tests/: conftest.py  test_cli.py  test_config.py  test_redaction.py  test_review_docs.py  test_schedule_state.py  test_sources.py
tests/fixtures/: claude-code-session.jsonl  codex-session.jsonl  generic.jsonl
