[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evolution-kit"
version = "0.1.0"
description = "Privacy-safe CLI skeleton for agent evolution workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Robin" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
agent-evolve = "agent_evolution.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
